- [FIXED] Some lists not wrapping properly (thanks PaulVT)
- [MODIFIED] Shutdown menu simplified
- [NEW] PVR recordings now indicate unwatched / unfinished content (thanks tnfenster)
- [MODIFIED] Page scrollbar appearance revised (thanks Solbero)
- [FIXED] Advanced launcher should now work (thanks Solbero)  
- [MODIFIED] Subtitle offset function autohides audio settings menu (thanks @Marsup)

[B]1.0.3[/B]
- [FIXED] Media source dialog (thanks Keli)
- [MODIFIED] Movie duration added to library lists (thanks solbero)
- [NEW] Global search added to homescreen (thanks mpschr)
- [MODIFIED] Grid overlay removed from music visualisation
- [NEW] Option to switch off various home menu items (see skin options)
- [MODIFIED] Video debugging OSD revised.
- [MODIFIED] 'First aired' date added to episode info view (thanks Postdeath)
- [FIXED] Music videos and video-based music addons no longer redirect to video section.
- Various minor tweaks
 
[B]1.0.2[/B]
- [NEW] Norwegian language support (thanks Takoi)
- [FIXED] Several localisation issues (thanks Takoi)
- [MODIFIED] General code refactoring (skinwide)
- [FIXED] Network location dialog navigation (thanks frankveltmans)
- [MODIFIED] Pictures section revised (wip)
- [MODIFIED] Fullscreen music indicators revised (Keli)
- [NEW] Music video menu item added to music section (thanks Keli)
- Various minor tweaks

[B]1.0.1[/B]
- [FIXED] Logout option returned to shutdown menu (thanks karandras24)
- [MODIFIED] Progress bar for fullscreen music position tweaked
- [FIXED] PVR channel list OSD and EPG (thanks MagHie)
- [MODIFIED] Video no longer stops on return to menu by default. Option to stop playback on menu is available in skin settings.
- [NEW] Finish time added to video OSD (thanks Takoi)

[B]1.0.0[/B]
- [MODIFIED] Video info modified to default to 'play' (thanks Vustom)
- [MODIFIED] Default background image changed (previous default retained, available from skin settings).
- [NEW] Czech language support (thanks MarhyCZ)